[Fix] Convert all for/while to foreach